--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
     mypy-check
     bandit-check
     py{27,39}
-    coverage
+    codecov
 
 [testenv]
 deps =
@@ -21,16 +21,28 @@ commands = pytest \
     --cov-append \
     swinging_door.py
 
+[testenv:codecov]
+deps =
+    coverage
+    codecov
+setenv =
+    CODECOV_TOKEN = {env:CODECOV_TOKEN}
+commands =
+    coverage html
+    coverage report --include="*" --fail-under=100 -m
+    coverage xml
+    codecov -f coverage.xml
+
 [testenv:coverage]
-deps = coverage
+deps =
+    coverage
 commands =
     coverage html
     coverage report --include="*" --fail-under=100 -m
     coverage xml
 
 [testenv:test]
-deps =
-    pytest
+deps = pytest
 commands = pytest -sv swinging_door.py
 
 [testenv:isort]
@@ -38,95 +50,94 @@ deps = isort
 commands = isort \
     --settings tox.ini \
     --verbose \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:isort-check]
 deps = isort
 commands = isort \
     --settings tox.ini \
     --check \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:black]
 deps = black
 commands = black \
     --verbose \
     --line-length 79 \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:black-check]
 deps = black
 commands = black \
     --check \
     --line-length 79 \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:flake8]
 deps = flake8
 commands = flake8 \
     --config tox.ini \
     --verbose \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:flake8-check]
 deps = flake8
 commands = flake8 \
     --config tox.ini \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:pylint]
 deps = pylint
 commands = pylint \
     --rcfile=tox.ini \
     --verbose \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:pylint-check]
 deps = pylint
 commands = pylint \
     --rcfile=tox.ini \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:mypy]
 deps = mypy
 commands = mypy \
     --config-file tox.ini \
     --verbose \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:mypy-check]
 deps = mypy
 commands = mypy \
     --config-file tox.ini \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:bandit]
 deps = bandit
 commands = bandit \
     --verbose \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:bandit-check]
 deps = bandit
 commands = bandit \
     --quiet \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:radon-mi]
 deps = radon
 commands = radon \
     mi \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:radon-cc]
 deps = radon
 commands = radon \
     cc \
-    swinging_door.py setup.py
+    swinging_door.py setup.py docs/conf.py
 
 [testenv:docs]
-deps =
-    Sphinx
+deps = Sphinx
 commands =
     sphinx-build -b html -d docs/build/doctrees docs docs/build/html
 
@@ -146,8 +157,7 @@ setenv =
     TWINE_USERNAME = {env:TWINE_USERNAME}
     TWINE_PASSWORD = {env:TWINE_PASSWORD}
 deps = twine
-commands =
-    python -m twine upload dist/*
+commands = python -m twine upload dist/*
 
 [pytest]
 addopts = --doctest-modules
