Мелкие косметические правки.
Signed-off-by: Aleksandr F. Mikhaylov <chelaxe@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -151,6 +151,11 @@ commands =
     python -c 'import shutil; (shutil.rmtree(p, ignore_errors=True) for p in ["build", "dist"]);'
     python setup.py sdist bdist_wheel
 
+[testenv:readme]
+skip_install = True
+deps = readme-renderer
+commands = python -m readme_renderer README.rst
+
 [testenv:upload]
 skip_install = True
 setenv =
