Реализовать алгоритм SwingingDoor

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 [tox]
-basepython = python3.9
+basepython = python3.11
 envlist =
     isort-check
     black-check
     flake8-check
     pylint-check
+    ruff-check
     mypy-check
     bandit-check
-    py{27,39}
+    safety-check
+    py{311}
     codecov
 
 [testenv]
@@ -50,91 +52,114 @@ deps = isort
 commands = isort \
     --settings tox.ini \
     --verbose \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:isort-check]
 deps = isort
 commands = isort \
     --settings tox.ini \
     --check \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:black]
 deps = black
 commands = black \
     --verbose \
     --line-length 79 \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:black-check]
 deps = black
 commands = black \
     --check \
     --line-length 79 \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:flake8]
 deps = flake8
 commands = flake8 \
     --config tox.ini \
     --verbose \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:flake8-check]
 deps = flake8
 commands = flake8 \
     --config tox.ini \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:pylint]
 deps = pylint
 commands = pylint \
     --rcfile=tox.ini \
     --verbose \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:pylint-check]
 deps = pylint
 commands = pylint \
     --rcfile=tox.ini \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
+
+[testenv:ruff]
+deps = ruff
+commands = ruff check \
+    --verbose \
+    swinging_door.py docs/conf.py
+
+[testenv:ruff-check]
+deps = ruff
+commands = ruff check \
+    swinging_door.py docs/conf.py
 
 [testenv:mypy]
 deps = mypy
 commands = mypy \
     --config-file tox.ini \
     --verbose \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:mypy-check]
 deps = mypy
 commands = mypy \
     --config-file tox.ini \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:bandit]
 deps = bandit
 commands = bandit \
     --verbose \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:bandit-check]
 deps = bandit
 commands = bandit \
     --quiet \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
+
+[testenv:safety]
+setenv =
+    SAFETY_API_KEY = {env:SAFETY_API_KEY}
+deps = safety
+commands = safety scan --detailed-output
+
+[testenv:safety-check]
+setenv =
+    SAFETY_API_KEY = {env:SAFETY_API_KEY}
+deps = safety
+commands = safety scan
 
 [testenv:radon-mi]
 deps = radon
 commands = radon \
     mi \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:radon-cc]
 deps = radon
 commands = radon \
     cc \
-    swinging_door.py setup.py docs/conf.py
+    swinging_door.py docs/conf.py
 
 [testenv:docs]
 deps = Sphinx
@@ -144,16 +169,19 @@ commands =
 [testenv:build]
 skip_install = True
 deps =
+    build
     wheel
     docutils
     pygments
 commands =
     python -c 'import shutil; (shutil.rmtree(p, ignore_errors=True) for p in ["build", "dist"]);'
-    python setup.py sdist bdist_wheel
+    python -m build
 
 [testenv:readme]
 skip_install = True
-deps = readme-renderer
+deps = 
+    readme-renderer
+    readme_renderer[md]
 commands = python -m readme_renderer README.rst
 
 [testenv:upload]
